[gd_scene load_steps=7 format=3 uid="uid://di2rax8a0mquj"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_hcpmn"]
[ext_resource type="Texture2D" uid="uid://dth6g17y82rwq" path="res://sprites/buttons/pixil-frame-0.png" id="2_f2747"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ulgy4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ih544"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oxhhx"]
bg_color = Color(0.302004, 0.302004, 0.302004, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 5
shadow_offset = Vector2(10, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwwti"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 5
shadow_offset = Vector2(10, 10)

[node name="setting" type="CanvasLayer"]
layer = 9

[node name="Settings" type="Control" parent="."]
visible = false
top_level = true
z_index = 7
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hcpmn")
bus_name = "Master"

[node name="game_over_plane" type="ColorRect" parent="Settings"]
z_index = -2
offset_left = -61.0
offset_top = -38.0
offset_right = 634.0
offset_bottom = 357.0
scale = Vector2(3.0469, 3.0469)
color = Color(0.187904, 2.28621e-07, 3.00817e-08, 1)

[node name="Panel" type="Panel" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ulgy4")

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sound_Slider" type="HSlider" parent="Settings"]
layout_mode = 2
offset_left = 615.0
offset_top = 560.0
offset_right = 1331.0
offset_bottom = 576.0
max_value = 0.5
step = 0.01
value = 0.5

[node name="Label" type="Label" parent="Settings"]
layout_mode = 2
offset_left = 908.0
offset_top = 501.0
offset_right = 1018.0
offset_bottom = 543.0
theme_override_font_sizes/font_size = 30
text = "Volume"

[node name="Label2" type="Label" parent="Settings"]
layout_mode = 2
offset_left = 890.0
offset_top = 318.0
offset_right = 1088.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 30
text = "Resolution:"

[node name="Label3" type="Label" parent="Settings"]
layout_mode = 2
offset_left = 890.0
offset_top = 622.0
offset_right = 1088.0
offset_bottom = 664.0
theme_override_font_sizes/font_size = 30
text = "Display mode:"

[node name="resolution" type="OptionButton" parent="Settings"]
layout_mode = 0
offset_left = 890.0
offset_top = 380.0
offset_right = 1061.0
offset_bottom = 442.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_ih544")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oxhhx")
theme_override_styles/normal = SubResource("StyleBoxFlat_kwwti")
selected = 1
item_count = 4
popup/item_0/text = "2560x1440"
popup/item_1/text = "1920x1080"
popup/item_1/id = 1
popup/item_2/text = "1366x768"
popup/item_2/id = 2
popup/item_3/text = "1280x720"
popup/item_3/id = 3

[node name="screen_stretch" type="OptionButton" parent="Settings"]
layout_mode = 0
offset_left = 890.0
offset_top = 711.0
offset_right = 1061.0
offset_bottom = 773.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_ih544")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oxhhx")
theme_override_styles/normal = SubResource("StyleBoxFlat_kwwti")
selected = 1
item_count = 2
popup/item_0/text = "Windowed"
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="Pixil-frame-0" type="Sprite2D" parent="Settings"]
z_index = 5
position = Vector2(976, 205)
scale = Vector2(15.0524, 15.0524)
texture = ExtResource("2_f2747")

[connection signal="value_changed" from="Settings/Sound_Slider" to="Settings" method="_on_sound_slider_value_changed"]
[connection signal="item_selected" from="Settings/resolution" to="Settings" method="_on_option_button_item_selected"]
[connection signal="item_selected" from="Settings/screen_stretch" to="Settings" method="_on_screen_stretch_item_selected"]
